# map-digitization

./: .gitignore  README.md  environment.yml  process_map.py  pyproject.toml  setup.sh
data/ocr_data/: metadata.csv
outputs/data/: final_output.gpkg
outputs/models/trocr-tuned-ocr/: config.json  generation_config.json  tokenizer.json
src/: create_ocr_dataset.py  draft_mask.py  process_map.py  train_ocr.py  train_segmentation.py  verify_output.py
