[tool.poetry]
name = "map-digitization"
version = "0.1.0"
description = "Computer vision to digitize redline boundaries and text from maps."
authors = ["owhondamoses7@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

geopandas = "^0.14.4"
rasterio = "^1.3.10"
shapely = "^2.0.4"

opencv-python-headless = "^4.10.0.82"
pytesseract = "^0.3.10"
Pillow = "^10.3.0"
scikit-image = "^0.24.0"   
albumentations = "^1.4.8" 

numpy = "^2.1.0"
pandas = "^2.2.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.9.0"    
tqdm = "^4.66.1"

ipykernel = "^6.29.0"
optuna = "^4.4.0"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"